Middleware/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  creationTimestamp: null
  labels:
    app: searchvault-middleware
  name: searchvault-middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searchvault-middleware
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: searchvault-middleware
    spec:
      containers:
      - image: ghcr.io/alphametic-services-and-technologies/searchvault-middleware:latest
        imagePullPolicy: Always
        name: searchvault-middleware
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerconfigjson-github-com
