Middleware/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searchvault-middleware
  namespace: staging
  labels:
    app: searchvault-middleware
spec:
  selector:
    app: searchvault-middleware
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
