Middleware/k8s/ingress.yaml
kind: List

apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-production
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.middlewares: staging-redirect-https@kubernetescrd
  
    name: searchvault-middleware
    namespace: staging
  spec:
    rules:
    - host: searchvault-middleware.ast-lb.com
      http:
        paths:
        - backend:
            service:
              name: searchvault-middleware
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - searchvault-middleware.ast-lb.com
      secretName: searchvault-middleware-staging-tls
